gen/MiLenguajeParser.py
# Generated from C:/Users/Frrn/PycharmProjects/CompilerChomin_py\MiLenguaje.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiLenguajeParser ( Parser ):

    grammarFileName = "MiLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"'", "'SI'", "'ENTONCES'", "'SINO'", 
                     "'SWITCH'", "'IMPRIMIR'", "'PARA'", "'MIENTRAS'", "'HASTA'", 
                     "'='", "<INVALID>", "'('", "')'", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IF", "THEN", "ELSE", "ELIF", 
                      "PRINT", "FOR", "WHILE", "TO", "EQUALS", "OPERATOR", 
                      "OPEN_PAREN", "CLOSE_PAREN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "NUMBER", "LETTER", "DIGIT", "WHITESPACE" ]

    RULE_start = 0
    RULE_statement = 1
    RULE_condition = 2
    RULE_action = 3
    RULE_expression = 4
    RULE_expression_print = 5
    RULE_arithmeticExpression = 6
    RULE_additiveExpression = 7
    RULE_multiplicativeExpression = 8
    RULE_assignmentExpression = 9
    RULE_primaryExpression = 10
    RULE_variableDeclaration = 11
    RULE_assignment = 12
    RULE_variable = 13

    ruleNames =  [ "start", "statement", "condition", "action", "expression", 
                   "expression_print", "arithmeticExpression", "additiveExpression", 
                   "multiplicativeExpression", "assignmentExpression", "primaryExpression", 
                   "variableDeclaration", "assignment", "variable" ]

    EOF = Token.EOF
    T__0=1
    IF=2
    THEN=3
    ELSE=4
    ELIF=5
    PRINT=6
    FOR=7
    WHILE=8
    TO=9
    EQUALS=10
    OPERATOR=11
    OPEN_PAREN=12
    CLOSE_PAREN=13
    PLUS=14
    MINUS=15
    MULTIPLY=16
    DIVIDE=17
    NUMBER=18
    LETTER=19
    DIGIT=20
    WHITESPACE=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.StatementContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = MiLenguajeParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.statement()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 524724) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiLenguajeParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(MiLenguajeParser.ConditionContext,0)


        def THEN(self):
            return self.getToken(MiLenguajeParser.THEN, 0)

        def action(self):
            return self.getTypedRuleContext(MiLenguajeParser.ActionContext,0)


        def ELSE(self):
            return self.getToken(MiLenguajeParser.ELSE, 0)

        def FOR(self):
            return self.getToken(MiLenguajeParser.FOR, 0)

        def variable(self):
            return self.getTypedRuleContext(MiLenguajeParser.VariableContext,0)


        def EQUALS(self):
            return self.getToken(MiLenguajeParser.EQUALS, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExpressionContext,i)


        def TO(self):
            return self.getToken(MiLenguajeParser.TO, 0)

        def WHILE(self):
            return self.getToken(MiLenguajeParser.WHILE, 0)

        def ELIF(self):
            return self.getToken(MiLenguajeParser.ELIF, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(MiLenguajeParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiLenguajeParser.AssignmentContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiLenguajeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(MiLenguajeParser.IF)
                self.state = 34
                self.condition()
                self.state = 35
                self.match(MiLenguajeParser.THEN)
                self.state = 36
                self.action()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(MiLenguajeParser.ELSE)
                self.state = 39
                self.match(MiLenguajeParser.THEN)
                self.state = 40
                self.action()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.match(MiLenguajeParser.FOR)
                self.state = 42
                self.variable()
                self.state = 43
                self.match(MiLenguajeParser.EQUALS)
                self.state = 44
                self.expression()
                self.state = 45
                self.match(MiLenguajeParser.TO)
                self.state = 46
                self.expression()
                self.state = 47
                self.action()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.match(MiLenguajeParser.WHILE)
                self.state = 50
                self.condition()
                self.state = 51
                self.action()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.match(MiLenguajeParser.ELIF)
                self.state = 54
                self.condition()
                self.state = 55
                self.action()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.variableDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExpressionContext,i)


        def OPERATOR(self):
            return self.getToken(MiLenguajeParser.OPERATOR, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = MiLenguajeParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.expression()
            self.state = 62
            self.match(MiLenguajeParser.OPERATOR)
            self.state = 63
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MiLenguajeParser.PRINT, 0)

        def OPEN_PAREN(self):
            return self.getToken(MiLenguajeParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(MiLenguajeParser.CLOSE_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpressionContext,0)


        def expression_print(self):
            return self.getTypedRuleContext(MiLenguajeParser.Expression_printContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = MiLenguajeParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(MiLenguajeParser.PRINT)
            self.state = 66
            self.match(MiLenguajeParser.OPEN_PAREN)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 67
                self.expression()
                pass

            elif la_ == 2:
                self.state = 68
                self.expression_print()
                pass


            self.state = 71
            self.match(MiLenguajeParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmeticExpression(self):
            return self.getTypedRuleContext(MiLenguajeParser.ArithmeticExpressionContext,0)


        def assignmentExpression(self):
            return self.getTypedRuleContext(MiLenguajeParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = MiLenguajeParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 18, 19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.arithmeticExpression()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.assignmentExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_printContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.LETTER)
            else:
                return self.getToken(MiLenguajeParser.LETTER, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NUMBER)
            else:
                return self.getToken(MiLenguajeParser.NUMBER, i)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expression_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_print" ):
                listener.enterExpression_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_print" ):
                listener.exitExpression_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_print" ):
                return visitor.visitExpression_print(self)
            else:
                return visitor.visitChildren(self)




    def expression_print(self):

        localctx = MiLenguajeParser.Expression_printContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression_print)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MiLenguajeParser.T__0)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 79 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 78
                            self.match(MiLenguajeParser.LETTER)

                        else:
                            raise NoViableAltException(self)
                        self.state = 81 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                    pass
                elif token in [18]:
                    self.state = 84 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 83
                            self.match(MiLenguajeParser.NUMBER)

                        else:
                            raise NoViableAltException(self)
                        self.state = 86 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18 or _la==19):
                    break

            self.state = 92
            self.match(MiLenguajeParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self):
            return self.getTypedRuleContext(MiLenguajeParser.AdditiveExpressionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_arithmeticExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpression" ):
                listener.enterArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpression" ):
                listener.exitArithmeticExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpression" ):
                return visitor.visitArithmeticExpression(self)
            else:
                return visitor.visitChildren(self)




    def arithmeticExpression(self):

        localctx = MiLenguajeParser.ArithmeticExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arithmeticExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.additiveExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.MultiplicativeExpressionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.MultiplicativeExpressionContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.PLUS)
            else:
                return self.getToken(MiLenguajeParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.MINUS)
            else:
                return self.getToken(MiLenguajeParser.MINUS, i)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_additiveExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpression" ):
                listener.enterAdditiveExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpression" ):
                listener.exitAdditiveExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpression" ):
                return visitor.visitAdditiveExpression(self)
            else:
                return visitor.visitChildren(self)




    def additiveExpression(self):

        localctx = MiLenguajeParser.AdditiveExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_additiveExpression)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.multiplicativeExpression()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14 or _la==15:
                    self.state = 101
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [14]:
                        self.state = 97
                        self.match(MiLenguajeParser.PLUS)
                        self.state = 98
                        self.multiplicativeExpression()
                        pass
                    elif token in [15]:
                        self.state = 99
                        self.match(MiLenguajeParser.MINUS)
                        self.state = 100
                        self.multiplicativeExpression()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.PrimaryExpressionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.PrimaryExpressionContext,i)


        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.MULTIPLY)
            else:
                return self.getToken(MiLenguajeParser.MULTIPLY, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.DIVIDE)
            else:
                return self.getToken(MiLenguajeParser.DIVIDE, i)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_multiplicativeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpression" ):
                listener.enterMultiplicativeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpression" ):
                listener.exitMultiplicativeExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpression" ):
                return visitor.visitMultiplicativeExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplicativeExpression(self):

        localctx = MiLenguajeParser.MultiplicativeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_multiplicativeExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.primaryExpression()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 114
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 110
                    self.match(MiLenguajeParser.MULTIPLY)
                    self.state = 111
                    self.primaryExpression()
                    pass
                elif token in [17]:
                    self.state = 112
                    self.match(MiLenguajeParser.DIVIDE)
                    self.state = 113
                    self.primaryExpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.LETTER)
            else:
                return self.getToken(MiLenguajeParser.LETTER, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NUMBER)
            else:
                return self.getToken(MiLenguajeParser.NUMBER, i)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_assignmentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpression" ):
                listener.enterAssignmentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpression" ):
                listener.exitAssignmentExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentExpression" ):
                return visitor.visitAssignmentExpression(self)
            else:
                return visitor.visitChildren(self)




    def assignmentExpression(self):

        localctx = MiLenguajeParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignmentExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MiLenguajeParser.T__0)
            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 121 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 120
                            self.match(MiLenguajeParser.LETTER)

                        else:
                            raise NoViableAltException(self)
                        self.state = 123 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                    pass
                elif token in [18]:
                    self.state = 126 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 125
                            self.match(MiLenguajeParser.NUMBER)

                        else:
                            raise NoViableAltException(self)
                        self.state = 128 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18 or _la==19):
                    break

            self.state = 134
            self.match(MiLenguajeParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(MiLenguajeParser.VariableContext,0)


        def OPEN_PAREN(self):
            return self.getToken(MiLenguajeParser.OPEN_PAREN, 0)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(MiLenguajeParser.ArithmeticExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(MiLenguajeParser.CLOSE_PAREN, 0)

        def NUMBER(self):
            return self.getToken(MiLenguajeParser.NUMBER, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = MiLenguajeParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primaryExpression)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.variable()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(MiLenguajeParser.OPEN_PAREN)
                self.state = 138
                self.arithmeticExpression()
                self.state = 139
                self.match(MiLenguajeParser.CLOSE_PAREN)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(MiLenguajeParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(MiLenguajeParser.EQUALS, 0)

        def expression(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpressionContext,0)


        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.LETTER)
            else:
                return self.getToken(MiLenguajeParser.LETTER, i)

        def variable(self):
            return self.getTypedRuleContext(MiLenguajeParser.VariableContext,0)


        def assignmentExpression(self):
            return self.getTypedRuleContext(MiLenguajeParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = MiLenguajeParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 144
                    self.match(MiLenguajeParser.LETTER)
                    self.state = 147 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==19):
                        break

                self.state = 149
                self.match(MiLenguajeParser.EQUALS)
                self.state = 150
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.variable()
                self.state = 152
                self.match(MiLenguajeParser.EQUALS)
                self.state = 153
                self.assignmentExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
